force-app/main/default/objects/Product_Implementation__c/Product_Implementation__c.object-meta.xml
<CustomObject>
    <label>Handover</label>
    <nameField>
        <displayFormat>ProImp-{000000}</displayFormat>
        <label>Product Implementation  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Handovers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>