force-app/main/default/objects/Product_Implementation__c/fields/Account_Growth_Potential__c.field-meta.xml
<CustomField>
    <fullName>Account_Growth_Potential__c</fullName>
    <description>MIS-474</description>
    <inlineHelpText>What is the growth potential for this account? (New Teams/User Cases/Features)</inlineHelpText>
    <label>Account Growth Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>