force-app/main/default/objects/Product_Implementation__c/fields/Allocated_Seats__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Seats__c</fullName>
    <formula>Account__r.BI_Data__r.Number_Of_Allocated_Seats__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number Of Allocated Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>