force-app/main/default/objects/Product_Implementation__c/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AM</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.UserRole.Name</field>
            <operation>contains</operation>
            <value>CSM</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Implementation</relationshipName>
    <type>Lookup</type>
</CustomField>