force-app/main/default/objects/Product_Implementation__c/fields/AM_s_role_Implementation_Expectations__c.field-meta.xml
<CustomField>
    <fullName>AM_s_role_Implementation_Expectations__c</fullName>
    <description>MIS-474</description>
    <label>AM&apos;s Role &amp; Implementation Expectations</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>