force-app/main/default/objects/Product_Implementation__c/fields/Anything_Else__c.field-meta.xml
<CustomField>
    <fullName>Anything_Else__c</fullName>
    <description>MIS-474</description>
    <label>Anything Else? (Potential issues etc)</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>