force-app/main/default/objects/Product_Implementation__c/fields/API_hits__c.field-meta.xml
<CustomField>
    <fullName>API_hits__c</fullName>
    <description>MIS-2567</description>
    <label>API hits</label>
    <length>255</length>
    <type>Text</type>
</CustomField>