force-app/main/default/objects/Product_Implementation__c/fields/ARR__c.field-meta.xml
<CustomField>
    <fullName>ARR__c</fullName>
    <description>MIS-474</description>
    <formula>Opportunity__r.ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>