force-app/main/default/objects/Product_Implementation__c/fields/Budget_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Budget_Cycle__c</fullName>
    <description>MIS-474</description>
    <formula>Account__r.Budget_Cycle_Start_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Cycle</label>
    <type>Date</type>
</CustomField>