force-app/main/default/objects/Product_Implementation__c/fields/Budget_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Budget_Holder_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-474</description>
    <label>Budget Holder Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Handovers</relationshipLabel>
    <relationshipName>Solution_Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>