force-app/main/default/objects/Product_Implementation__c/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MIS-474</description>
    <label>Champion</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Handovers (Champion)</relationshipLabel>
    <relationshipName>Handovers</relationshipName>
    <type>Lookup</type>
</CustomField>