force-app/main/default/objects/Product_Implementation__c/fields/Changes_to_T_C__c.field-meta.xml
<CustomField>
    <fullName>Changes_to_T_C__c</fullName>
    <description>MIS-2567</description>
    <inlineHelpText>Any changes to T&amp;Cs that the AM/CS should be aware of? (7% removal, logo rights, etc)</inlineHelpText>
    <label>Changes to T&amp;C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>