force-app/main/default/objects/Product_Implementation__c/fields/Client_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Client_Introduction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-474</description>
    <label>Client Introduction</label>
    <type>Checkbox</type>
</CustomField>