force-app/main/default/objects/Product_Implementation__c/fields/Client_KPIs__c.field-meta.xml
<CustomField>
    <fullName>Client_KPIs__c</fullName>
    <description>MIS-474</description>
    <label>Client KPIs</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>