force-app/main/default/objects/Product_Implementation__c/fields/Company_Business_Model__c.field-meta.xml
<CustomField>
    <fullName>Company_Business_Model__c</fullName>
    <description>MIS-474</description>
    <label>Company Business Model</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>