force-app/main/default/objects/Product_Implementation__c/fields/Competitors_Tickers__c.field-meta.xml
<CustomField>
    <fullName>Competitors_Tickers__c</fullName>
    <description>MIS-2567</description>
    <inlineHelpText>What are their competitors</inlineHelpText>
    <label>Competitors/Tickers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>