force-app/main/default/objects/Product_Implementation__c/fields/Completed_Date_del__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date_del__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>