force-app/main/default/objects/Product_Implementation__c/fields/CreatedBy_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>CreatedBy_Manager_Email__c</fullName>
    <description>MIS-474</description>
    <label>CreatedBy Manager Email</label>
    <type>Email</type>
</CustomField>