force-app/main/default/objects/Product_Implementation__c/fields/CS_Decks_Link__c.field-meta.xml
<CustomField>
    <fullName>CS_Decks_Link__c</fullName>
    <description>MIS-474</description>
    <label>CS Decks Link</label>
    <length>200</length>
    <type>Text</type>
</CustomField>