force-app/main/default/objects/Product_Implementation__c/fields/CSA__c.field-meta.xml
<CustomField>
    <fullName>CSA__c</fullName>
    <description>MIS-474</description>
    <formula>Account__r.Assigned_CSA_Name__r.FirstName + &quot; &quot; + Account__r.Assigned_CSA_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSA</label>
    <type>Text</type>
</CustomField>