force-app/main/default/objects/Product_Implementation__c/fields/Custom_work_If_yes_describe__c.field-meta.xml
<CustomField>
    <fullName>Custom_work_If_yes_describe__c</fullName>
    <description>MIS-474</description>
    <inlineHelpText>If yes, please describe</inlineHelpText>
    <label>Custom work?</label>
    <type>TextArea</type>
</CustomField>