force-app/main/default/objects/Product_Implementation__c/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <description>MIS-4427</description>
    <formula>Opportunity__r.Decision_Process__c</formula>
    <label>Decision Criteria</label>
    <type>Text</type>
</CustomField>