force-app/main/default/objects/Product_Implementation__c/fields/Decision_Maker_Verbal_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Verbal_Commitment__c</fullName>
    <description>MIS-4427</description>
    <formula>Opportunity__r.Decision_Maker__c</formula>
    <label>Decision Maker Verbal Commitment</label>
    <type>Checkbox</type>
</CustomField>