force-app/main/default/objects/Product_Implementation__c/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <description>MIS-4427</description>
    <formula>Opportunity__r.Economic_Buyer__r.FirstName+&quot; &quot;+Opportunity__r.Economic_Buyer__r.LastName</formula>
    <label>Economic Buyer</label>
    <type>Text</type>
</CustomField>