force-app/main/default/objects/Product_Implementation__c/fields/End_date_of_OB__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_OB__c</fullName>
    <description>MIS-4499</description>
    <label>End date of OB</label>
    <type>Date</type>
</CustomField>