force-app/main/default/objects/Product_Implementation__c/fields/EndOfPIMeeting__c.field-meta.xml
<CustomField>
    <fullName>EndOfPIMeeting__c</fullName>
    <label>End Of PI Meeting</label>
    <type>Date</type>
</CustomField>