force-app/main/default/objects/Product_Implementation__c/fields/First_Pro_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Pro_Purchase_Date__c</fullName>
    <formula>Account__r.BI_Data__r.First_Pro_Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Pro Purchase Date</label>
    <type>Date</type>
</CustomField>