force-app/main/default/objects/Product_Implementation__c/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <formula>Account__r.Health_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health Score</label>
    <type>Text</type>
</CustomField>