force-app/main/default/objects/Product_Implementation__c/fields/Identify_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identify_Pain__c</fullName>
    <description>MIS-4427</description>
    <formula>Opportunity__r.Competition_Text__c</formula>
    <label>Identify Pain</label>
    <type>Text</type>
</CustomField>