force-app/main/default/objects/Product_Implementation__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>MIS-474</description>
    <formula>TEXT(Account__r.SW_Industry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry</label>
    <type>Text</type>
</CustomField>