force-app/main/default/objects/Product_Implementation__c/fields/Internal_Handover_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Handover_Meeting_Date__c</fullName>
    <label>Internal Handover Meeting Date</label>
    <type>Date</type>
</CustomField>