force-app/main/default/objects/Product_Implementation__c/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <description>MIS-4427</description>
    <formula>Opportunity__r.Metrics__c</formula>
    <label>Metrics</label>
    <type>Text</type>
</CustomField>