force-app/main/default/objects/Product_Implementation__c/fields/Not_Bought_Premium_Features__c.field-meta.xml
<CustomField>
    <fullName>Not_Bought_Premium_Features__c</fullName>
    <description>MIS-474
If new values were added to the Product_Sold__c picklist on the Opportunity, add them to this picklist as well</description>
    <inlineHelpText>Were there any premium features discussed that were not bought?</inlineHelpText>
    <label>Features Potential for an Upsell</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advisory Services</fullName>
            </value>
            <value>
                <fullName>Annual Price Increase</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>Country Filters</fullName>
            </value>
            <value>
                <fullName>Custom Reports</fullName>
            </value>
            <value>
                <fullName>Data Feeds</fullName>
            </value>
            <value>
                <fullName>Enterprise Trial</fullName>
            </value>
            <value>
                <fullName>Conversion Analysis</fullName>
            </value>
            <value>
                <fullName>Historical data</fullName>
            </value>
            <value>
                <fullName>Sales Solution - Intelligence</fullName>
            </value>
            <value>
                <fullName>Sales Solution - Lead Enrichment</fullName>
            </value>
            <value>
                <fullName>Technographics</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Website Segment Analysis</fullName>
            </value>
            <value>
                <fullName>Shopper Intelligence (as standalone)</fullName>
            </value>
            <value>
                <fullName>Shopper Intelligence (as Add-On)</fullName>
            </value>
            <value>
                <fullName>Team Pass</fullName>
            </value>
            <value>
                <fullName>Users</fullName>
            </value>
            <value>
                <fullName>Unlimited Users</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Country Filter</fullName>
            </value>
            <value>
                <fullName>API Access</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Faster API</fullName>
            </value>
            <value>
                <fullName>API - Data Credit</fullName>
            </value>
            <value>
                <fullName>Rest API</fullName>
            </value>
            <value>
                <fullName>Marketing Channels</fullName>
            </value>
            <value>
                <fullName>Market Research</fullName>
            </value>
            <value>
                <fullName>Custom Segments</fullName>
            </value>
            <value>
                <fullName>Custom Industries</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>