force-app/main/default/objects/Product_Implementation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>MIS-4499</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>