force-app/main/default/objects/Product_Implementation__c/fields/Opportunity_Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Closed_Date__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.StageName,&quot;Closed Won&quot;),Opportunity__r.CloseDate,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Closed Date</label>
    <type>Date</type>
</CustomField>