force-app/main/default/objects/Product_Implementation__c/fields/Org_Comments__c.field-meta.xml
<CustomField>
    <fullName>Org_Comments__c</fullName>
    <description>MIS-474</description>
    <label>Org Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>