force-app/main/default/objects/Product_Implementation__c/fields/PipelineDate__c.field-meta.xml
<CustomField>
    <fullName>PipelineDate__c</fullName>
    <label>Pipeline Date</label>
    <type>Date</type>
</CustomField>