force-app/main/default/objects/Product_Implementation__c/fields/Preferred_method_of_communication__c.field-meta.xml
<CustomField>
    <fullName>Preferred_method_of_communication__c</fullName>
    <description>MIS-2567</description>
    <inlineHelpText>What are the details of the users if they want to use this method</inlineHelpText>
    <label>Preferred method of communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
            <value>
                <fullName>WeChat</fullName>
            </value>
            <value>
                <fullName>Skype</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>