force-app/main/default/objects/Product_Implementation__c/fields/Previous_PIS__c.field-meta.xml
<CustomField>
    <fullName>Previous_PIS__c</fullName>
    <label>Previous PIS</label>
    <length>18</length>
    <type>Text</type>
</CustomField>