force-app/main/default/objects/Product_Implementation__c/fields/Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Date__c</fullName>
    <label>Onboarding Start Date</label>
    <type>Date</type>
</CustomField>