force-app/main/default/objects/Product_Implementation__c/fields/Proposal_Link__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Link__c</fullName>
    <description>MIS-474</description>
    <label>Proposal Link</label>
    <length>200</length>
    <type>Text</type>
</CustomField>