force-app/main/default/objects/Product_Implementation__c/fields/Red_Flag__c.field-meta.xml
<CustomField>
    <fullName>Red_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MIS-4499</description>
    <label>Red Flag</label>
    <type>Checkbox</type>
</CustomField>