force-app/main/default/objects/Product_Implementation__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <description>MIS-474</description>
    <formula>Opportunity__r.Owner.FirstName &amp; &quot; &quot; &amp; Opportunity__r.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>