force-app/main/default/objects/Product_Implementation__c/fields/SIM__c.field-meta.xml
<CustomField>
    <fullName>SIM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SIM</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Title</field>
            <operation>equals</operation>
            <value>Senior Client Success Analyst, Client Success Analyst, Client Success Team Manager</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Implementations</relationshipName>
    <type>Lookup</type>
</CustomField>