force-app/main/default/objects/Product_Implementation__c/fields/SimilarWeb_Exec_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>SimilarWeb_Exec_Sponsor__c</fullName>
    <description>MIS-474</description>
    <inlineHelpText>Was Donna, Irena, Carrie, or Jason involved?</inlineHelpText>
    <label>SW Executive Sponsor</label>
    <length>120</length>
    <type>Text</type>
</CustomField>