force-app/main/default/objects/Product_Implementation__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>MIS-474</description>
    <formula>TEXT( Opportunity__r.Primary_Use_Case__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution</label>
    <type>Text</type>
</CustomField>