force-app/main/default/objects/Product_Implementation__c/fields/Time_To_Green__c.field-meta.xml
<CustomField>
    <fullName>Time_To_Green__c</fullName>
    <formula>Account__r.BI_Data__r.First_Green_Health_Score_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Green Health Score Date</label>
    <type>Date</type>
</CustomField>