force-app/main/default/objects/Product_Implementation__c/fields/Total_Weeks_in_Green__c.field-meta.xml
<CustomField>
    <fullName>Total_Weeks_in_Green__c</fullName>
    <label>Total Weeks in Green</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>