force-app/main/default/objects/Product_Implementation__c/fields/Training_Package__c.field-meta.xml
<CustomField>
    <fullName>Training_Package__c</fullName>
    <description>MIS-474</description>
    <label>Training Package</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>