force-app/main/default/objects/Product_Implementation__c/fields/Trial_Information__c.field-meta.xml
<CustomField>
    <fullName>Trial_Information__c</fullName>
    <description>MIS-2567</description>
    <inlineHelpText>Was there a trial? If so, for how long? Details of the trial</inlineHelpText>
    <label>Trial Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>