force-app/main/default/objects/Product_Implementation__c/fields/User_Names_Roles_KPIs__c.field-meta.xml
<CustomField>
    <fullName>User_Names_Roles_KPIs__c</fullName>
    <description>MIS-2567</description>
    <inlineHelpText>Role of the users of the subscriptions</inlineHelpText>
    <label>User Names/Roles/KPIs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>