force-app/main/default/objects/Product_Implementation__c/fields/Vendor_CoR_or_any_other_legal_billing__c.field-meta.xml
<CustomField>
    <fullName>Vendor_CoR_or_any_other_legal_billing__c</fullName>
    <description>MIS-2567</description>
    <label>Vendor, CoR, or any other legal/billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>