force-app/main/default/objects/Product_Implementation__c/fields/Weeks_In_PI__c.field-meta.xml
<CustomField>
    <fullName>Weeks_In_PI__c</fullName>
    <formula>IF(ISpickval( Status__c,&quot;In Process&quot;),
(today()- Process_Date__c)/7 ,
if(ISpickval( Status__c,&quot;Completed&quot;),
(Completed_Date_del__c- Process_Date__c)/7 ,
Null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weeks In PI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>