force-app/main/default/objects/Product_Implementation__c/fields/What_was_the_legal_process_like__c.field-meta.xml
<CustomField>
    <fullName>What_was_the_legal_process_like__c</fullName>
    <description>MIS-2567</description>
    <label>What was the legal process like?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>