force-app/main/default/objects/Product_Implementation__c/fields/When_might_the_Opportunity_be_relevant__c.field-meta.xml
<CustomField>
    <fullName>When_might_the_Opportunity_be_relevant__c</fullName>
    <description>MIS-474</description>
    <inlineHelpText>When might the Opportunity be relevant again?</inlineHelpText>
    <label>When might the Opportunity be relevant?</label>
    <type>Date</type>
</CustomField>