force-app/main/default/objects/Product_Implementation__c/fields/Where_did_the_budget_come_from__c.field-meta.xml
<CustomField>
    <fullName>Where_did_the_budget_come_from__c</fullName>
    <description>MIS-474</description>
    <inlineHelpText>Was it split or was it one team&apos;s budget?</inlineHelpText>
    <label>Where did the budget come from?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>