force-app/main/default/objects/Product_Implementation__c/fields/Which_entity_bought__c.field-meta.xml
<CustomField>
    <fullName>Which_entity_bought__c</fullName>
    <description>MIS-474</description>
    <label>Which entity bought</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>