force-app/main/default/objects/Product_Implementation__c/fields/Who_else_from_SW_has_been_involved__c.field-meta.xml
<CustomField>
    <fullName>Who_else_from_SW_has_been_involved__c</fullName>
    <description>MIS-474</description>
    <label>Who else from SW has been involved?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>