force-app/main/default/objects/Product_Implementation__c/fields/Why_choose_SimilarWeb__c.field-meta.xml
<CustomField>
    <fullName>Why_choose_SimilarWeb__c</fullName>
    <description>MIS-474</description>
    <label>Why choose similarweb?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>