force-app/main/default/objects/Product_Implementation__c/validationRules/ProImp_Status_Could_not_be_rolled_back.validationRule-meta.xml
<ValidationRule>
    <fullName>ProImp_Status_Could_not_be_rolled_back</fullName>
    <active>false</active>
    <errorConditionFormula>ischanged(Status__c) &amp;&amp;(
(ispickval(Status__c,&quot;Pipeline&quot;) &amp;&amp; ispickval(priorvalue( Status__c),&quot;In Process&quot;))
||
(ispickval(Status__c,&quot;In Process&quot;) &amp;&amp; ispickval( priorvalue(Status__c),&quot;Completed&quot;))
||
(ispickval(Status__c,&quot;Pipeline&quot;) &amp;&amp; ispickval(priorvalue( Status__c),&quot;Completed&quot;))
) &amp;&amp; 
NOT($Profile.Id=&apos;00eb0000000oBvcAAE&apos;)</errorConditionFormula>
    <errorMessage>Status Could not be rolled back</errorMessage>
</ValidationRule>