force-app/main/default/objects/Product_Implementation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SIM__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>